--- a/Games/Tetris/index.html
+++ b/Games/Tetris/index.html
@@ -24,8 +24,8 @@
         </a>
       </section>
       <section id="options">
-        <button>Start</button>
-        <button>Pause</button>
+        <button id="start-game">Start</button>
+        <button id="pause-game">Pause</button>
       </section>
     </section>
     <section id="board">
