Added lines counter
fixed next piece

--- a/Games/Tetris/index.html
+++ b/Games/Tetris/index.html
@@ -31,8 +31,8 @@
     <section id="board">
       <section id="settings">
         <span><b>FPS:</b><span id="fps-counter">00</span></span>
-        <!--<span><b>Level:</b>00</span>
-        <span><b>Lines:</b>00</span>-->
+        <!--<span><b>Level:</b>00</span>-->
+        <span><b>Lines:</b><span id="lines-counter">00</span></span>
         <section id="keys">
           <table>
             <tr>
@@ -71,7 +71,7 @@
       <canvas id="game" width="250" height="500"></canvas>
       <section id="next">
         <span><b>Next piece</b></span>
-        <canvas id="nextpiece" width="100" height="100"></canvas>
+        <canvas id="nextpiece" width="125" height="100"></canvas>
       </section>
     </section>
   </section>
