--- a/Games/Tetris/index.html
+++ b/Games/Tetris/index.html
@@ -36,17 +36,17 @@
         <section id="keys">
           <table>
             <tr>
-              <td><b>up</b></td>
+              <td><b>⬆️</b></td>
               <td><div style="width:20px;"></div></td>
               <td>Rotate</td>
             </tr>
             <tr>
-              <td><b>left&nbsp;right</b></td>
+              <td><b>⬅️&nbsp;➡️</b></td>
               <td><div style="width:20px;"></div></td>
               <td>Move</td>
             </tr>
             <tr>
-              <td><b>down</b></td>
+              <td><b>⬇️</b></td>
               <td><div style="width:20px;"></div></td>
               <td>Down</td>
             </tr>
@@ -54,7 +54,7 @@
               <td><b>D</b></td>
               <td><div style="width:20px;"></div></td>
               <td>Drop</td>
-            </tr>
+            </tr>-->
             <tr>
               <td><b>P</b></td>
               <td><div style="width:20px;"></div></td>
@@ -64,7 +64,7 @@
               <td><b>N</b></td>
               <td><div style="width:20px;"></div></td>
               <td>New Game</td>
-            </tr>-->
+            </tr>
           </table>
         </section>
       </section>
@@ -72,6 +72,8 @@
       <section id="next">
         <span><b>Next piece</b></span>
         <canvas id="nextpiece" width="125" height="100"></canvas>
+        <span><b>Hold piece</b></span>
+        <canvas id="holdpiece" width="125" height="100"></canvas>
       </section>
     </section>
   </section>
