--- a/Games/Tetris/index.html
+++ b/Games/Tetris/index.html
@@ -56,6 +56,11 @@
               <td>Drop</td>
             </tr>-->
             <tr>
+              <td><b>SPACE</b></td>
+              <td><div style="width:20px;"></div></td>
+              <td>Drop</td>
+            </tr>
+            <tr>
               <td><b>P</b></td>
               <td><div style="width:20px;"></div></td>
               <td>Pause</td>
